<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VotreApplication</string>
    <string name="label_name">Nom</string>
    <string name="label_first_name">Prénom</string>
    <string name="label_age">Âge</string>
    <string name="label_skill">Domaine de compétences</string>
    <string name="label_phone">Numéro de téléphone</string>
    <string name="button_submit">Valider</string>
    <string name="info_validated">Informations validées</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm_info">Voulez-vous vraiment valider les informations ?</string>
    <string name="confirm">Confirmer</string>
    <string name="cancel">Annuler</string>
    <string name="error_message_empty_fields">Veuillez remplir tous les champs.</string>

</resources>